<resources>
    <string name="app_name">Rent-A Driver</string>
    <string name="home">Home</string>
    <string name="messages">Messages</string>
    <string name="history">History</string>
    <string name="payment">Payment</string>
    <string name="schedule">Schedule</string>
    <string name="notifications">Notifications</string>
    <string name="drive_with_rent_a">Drive with Rent-A</string>
    <string name="settings">Settings</string>
    <string name="permission_text">Rent-A need to access your locations and storage permissions for the best experience you need.</string>
    <string name="find_a_vehicle">Find A Vehicle</string>
    <string name="select_location">Select Location</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">LOG IN</string>
    <string name="by_signing_up_you_agree_to_the">By signing up, you agree to the</string>
    <string name="terms_and_conditions">terms and conditions</string>
    <string name="already_registered">Already registered?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="travel_date">Travel Date:</string>

    <string-array name="vehicle_type">
        <item>Van</item>
        <item>SUV</item>
        <item>Car</item>
        <item>Bus</item>
        <item>Shuttle Bus</item>
        <item>Mini Bus</item>
        <item>Jeep</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>
</resources>
