<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/signUpFacebookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/signUpGmailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/first_name" />

            <EditText
                android:id="@+id/middleNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/middle_name" />

            <EditText
                android:id="@+id/lastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/last_name" />

            <EditText
                android:id="@+id/contactNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/contact_number" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirmPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rounded_corner"
            android:padding="5dp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/by_signing_up_you_agree_to_the"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/blue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignTop="@+id/loginLinearLayout"
            android:layout_marginBottom="10dp"
            android:background="@color/lightGray" />

        <LinearLayout
            android:id="@+id/loginLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:text="@string/already_registered" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".50"
                android:gravity="right"
                android:text="@string/log_in"
                android:textColor="@color/blue" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>